refactor: implement encrypt text with symmetric algorithms