@@ -7,42 +7,81 @@ import java.util.List;
 import java.util.Map;
 
 public class EncryptionConfigFactory {
+
+    // Danh sách các mode dựa trên thuật toán
     private static final Map<String, List<String>> MODES_BY_ALGORITHM = Map.of(
-            AlgorithmsConstant.AES, Arrays.asList("GCM", "ECB", "KWP", "CBC", "OFB", "KW", "CFB"),
+            AlgorithmsConstant.AES, Arrays.asList("ECB", "CBC", "CFB", "OFB", "CTR", "GCM", "PCBC", "CTS"),
             AlgorithmsConstant.DES, Arrays.asList("CBC", "ECB", "CFB", "OFB", "PCBC", "CTR", "CTS"),
             AlgorithmsConstant.BLOWFISH, Arrays.asList("CBC", "ECB", "CFB", "OFB", "PCBC", "CTR", "CTS"),
             AlgorithmsConstant.TRIPLEDES, Arrays.asList("CBC", "ECB", "CFB", "OFB", "PCBC"),
-            AlgorithmsConstant.RC4, List.of("None"),
-            AlgorithmsConstant.SHIFT, List.of("None"),
-            AlgorithmsConstant.SUBSTITUTION, List.of("None"),
-            AlgorithmsConstant.VIGENERE, List.of("None"),
-            AlgorithmsConstant.HILL, List.of("None"),
-            AlgorithmsConstant.AFFINE, List.of("None")
+            AlgorithmsConstant.RC4, List.of("None")
     );
 
-    private static final Map<String, List<String>> PADDING_BY_MODE = Map.of(
-            "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
-            "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
-            "GCM", List.of("NoPadding"),
-            "KWP", List.of("NoPadding"),
-            "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
-            "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
-            "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
-            "CTR", List.of("NoPadding"),
-            "CTS", List.of("NoPadding"),
-            "None", Arrays.asList("PKCS1Padding", "OAEPWithSHA-256AndMGF1Padding")
+    // Danh sách các padding dựa trên mode
+//    private static final Map<String, List<String>> PADDING_BY_MODE = Map.of(
+//            "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+//            "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+//            "GCM", List.of("NoPadding"),
+//            "KWP", List.of("NoPadding"),
+//            "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+//            "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+//            "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+//            "CTR", List.of("NoPadding"),
+//            "CTS", List.of("NoPadding"),
+//            "None", Arrays.asList("PKCS1Padding", "OAEPWithSHA-256AndMGF1Padding")
+//    );
+    private static final Map<String, Map<String, List<String>>> PADDING_BY_ALGORITHM_AND_MODE = Map.of(
+            AlgorithmsConstant.AES, Map.of(
+                    "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "GCM", List.of("NoPadding"),
+                    "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CTR", List.of("NoPadding"),
+                    "CTS", List.of("NoPadding")
+            ),
+            AlgorithmsConstant.DES, Map.of(
+                    "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CTR", List.of("NoPadding"),
+                    "CTS", List.of("NoPadding")
+            ),
+            AlgorithmsConstant.BLOWFISH, Map.of(
+                    "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CTR", List.of("NoPadding"),
+                    "CTS", List.of("NoPadding")
+            ),
+            AlgorithmsConstant.TRIPLEDES, Map.of(
+                    "CBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "ECB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "CFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "OFB", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding"),
+                    "PCBC", Arrays.asList("PKCS5Padding", "NoPadding", "ISO10126Padding")
+            ),
+            AlgorithmsConstant.RC4, Map.of(
+                    "None", Arrays.asList("PKCS1Padding", "OAEPWithSHA-256AndMGF1Padding")
+            )
     );
 
+
+    // Danh sách kích thước key dựa trên thuật toán
     private static final Map<String, List<Integer>> KEY_SIZES_BY_ALGORITHM = Map.of(
-            "AES", Arrays.asList(128, 192, 256),
-            "DES", Arrays.asList(56),
-            "Blowfish", Arrays.asList(32, 64, 128, 192, 256),
-            "3DES", Arrays.asList(112, 168),
-            "RC2", Arrays.asList(40, 56, 64, 128, 192, 256),
-            "IDEA", Arrays.asList(128),
-            "RC4", Arrays.asList(128)
+            AlgorithmsConstant.AES, Arrays.asList(128, 192, 256),
+            AlgorithmsConstant.DES, Arrays.asList(56),
+            AlgorithmsConstant.BLOWFISH, Arrays.asList(32, 64, 128, 192, 256),
+            AlgorithmsConstant.TRIPLEDES, Arrays.asList(112, 168),
+            AlgorithmsConstant.RC4, Arrays.asList(128)
     );
 
+    // Kích thước IV dựa trên thuật toán
     private static final Map<String, Integer> IV_SIZE_MAP = Map.of(
             AlgorithmsConstant.AES, 16,
             AlgorithmsConstant.DES, 8,
@@ -52,18 +91,46 @@ public class EncryptionConfigFactory {
     );
 
 
+    /**
+     * Lấy danh sách mode của một thuật toán.
+     *
+     * @param algorithm Tên thuật toán
+     * @return Danh sách mode tương ứng
+     */
     public static List<String> getModes(String algorithm) {
         return MODES_BY_ALGORITHM.getOrDefault(algorithm, List.of());
     }
 
-    public static List<String> getPaddings(String mode) {
-        return PADDING_BY_MODE.getOrDefault(mode, List.of());
+    /**
+     * Lấy danh sách padding của một mode.
+     *
+     * @param mode Tên mode
+     * @return Danh sách padding tương ứng
+     */
+    public static List<String> getPaddings(String algorithm, String mode) {
+        Map<String, List<String>> paddingsByMode = PADDING_BY_ALGORITHM_AND_MODE.get(algorithm);
+        if (paddingsByMode != null) {
+            return paddingsByMode.getOrDefault(mode, List.of());
+        }
+        return List.of();
     }
 
+    /**
+     * Lấy danh sách kích thước key của một thuật toán.
+     *
+     * @param algorithm Tên thuật toán
+     * @return Danh sách kích thước key tương ứng
+     */
     public static List<Integer> getKeySizes(String algorithm) {
         return KEY_SIZES_BY_ALGORITHM.getOrDefault(algorithm, List.of());
     }
 
+    /**
+     * Lấy kích thước IV của một thuật toán.
+     *
+     * @param algorithm Tên thuật toán
+     * @return Kích thước IV tương ứng
+     */
     public static int getIvSize(String algorithm) {
         return IV_SIZE_MAP.getOrDefault(algorithm, 0);
     }
